[package]
name = "thai-compound-centipede"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
rayon = "1.7.0"
reqwest = "0.11.20"

[workspace]
members = ["scrape-words"]
