[package]
name = "scrape-words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
serde_json = "1.0.105"
anyhow = "1.0.75"
futures = "0.3.28"
